--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   firebase_core: ^4.3.0
+  image_picker: ^1.2.1
+  provider: ^6.1.5+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
